# ai-social-engineering-simulator

backend/: .pre-commit-config.yaml  pyproject.toml
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/social_engineering_simulator/application/dto/: create_organization.py
backend/src/social_engineering_simulator/application/services/: create_organization.py  exception_create_organization.py
backend/src/social_engineering_simulator/domain/organizations/: entity.py  exceptions.py  value_object.py
backend/src/social_engineering_simulator/domain/organizations/Department/: entity.py  value_object.py
backend/src/social_engineering_simulator/domain/organizations/department/: entity.py  exceptions.py  value_object.py
backend/src/social_engineering_simulator/domain/organizations/department/employee/: entity.py  exceptions.py  value_object.py
backend/src/social_engineering_simulator/presentation/: app.py  main.py
backend/src/social_engineering_simulator/presentation/api/v1/: dependencies.py  excrption_handlers.py
backend/src/social_engineering_simulator/presentation/api/v1/routers/: organization.py
backend/src/social_engineering_simulator/presentation/api/v1/schemas/: organization.py
backend/tests/: conftest.py
backend/tests/presentation/: test_organization_api.py
backend/tests/unit/: test_create_org_dto.py  test_employee.py  test_organization.py
