[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "uvicorn>=0.51.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
lint.select = [
    "F",    # Pyflakes (критические ошибки, неопределенные переменные)
    "E",    # pycodestyle errors (стиль кода PEP 8)
    "W",    # pycodestyle warnings (предупреждения стиля)
    "I",    # isort (автоматическая правильная сортировка импортов)
    "UP",   # pyupgrade (модернизация синтаксиса до актуальной версии Python)
    "B",    # flake8-bugbear (поиск неочевидных багов и дизайн-ошибок)
    "SIM",  # flake8-simplify (советы по упрощению перегруженного кода)
    "C4",   # flake8-comprehensions (оптимизация генераторов списков/словарей)
    "N",    # pep8-naming (контроль регистра: CamelCase для классов, snake_case для функций)
    "RUF",  # Собственные специфичные правила Ruff
]

[tool.ruff.lint.per-file-ignores]
# Игнорируем неиспользуемые импорты в __init__.py (они там нужны для экспорта)
"__init__.py" = ["F401"]

[tool.ruff.format]
# Настройки форматирования (соответствуют стандарту Black)
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Можно указать папки, которые mypy будет игнорировать
exclude = [
    "tests/",
    ".venv/",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
]
lint = [
    "ruff>=0.15.21",
]
test = [
    "pytest>=9.1.1",
]

[tool.uv]
package = true